<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_rock_paper_scisors"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_your_weapon"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnRock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnRockClicked"
            android:text="@string/rock"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnPaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnPaperClicked"
            android:text="@string/paper"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnScissors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnScissorsClicked"
            android:text="@string/scissors"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/winCountView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/weaponChoiceView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/winnerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>